--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/andela-wmaina/inverted-index#readme",
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-jasmine-node": "^1.0.7"
   },
   "dependencies": {
     "body-parser": "1.15.2",
