--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "node node_modules/grunt-cli/bin/gulp jasmine",
-    "coverage": "node_modules/coveralls/bin/coveralls.js"
+    "coverage": "istanbul cover jasmine-node --captureExceptions test && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
 
   },
   "repository": {
