--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "homepage": "https://github.com/andela-wmaina/inverted-index#readme",
   "devDependencies": {
     "coveralls": "^2.11.15",
+    "eslint": "^3.13.1",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^2.0.1",
     "gulp": "^3.9.1",
     "gulp-jasmine-node": "^1.0.7",
     "gulp-livereload": "^3.8.1"
