--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,5 @@ before_script:
 script:
   - gulp jasmine
 after_script:
-  - npm run coverage
+  - node node_modules/lcov-filter/index.js lcov.info config | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+
