--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "eslint-plugin-standard": "^2.0.1",
     "gulp": "^3.9.1",
     "gulp-jasmine-node": "^1.0.7",
-    "gulp-livereload": "^3.8.1"
+    "gulp-livereload": "^3.8.1",
+    "jshint": "^2.9.4"
   },
   "dependencies": {
     "body-parser": "1.15.2",
