--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,4 @@ before_script:
 script:
   - gulp jasmine
 after_script:
-  - node node_modules/lcov-filter/index.js lcov.info config | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
-
+  - istanbul cover jasmine-node --captureExceptions spec/ && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
