--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "body-parser": "1.15.2",
     "express": "~4.8.0",
     "gulp-open": "^2.0.0",
+    "http": "0.0.0",
+    "istanbul": "^0.4.5",
     "method-override": "~2.0.2",
     "multer": "1.1.0",
-    "http": "0.0.0",
     "path": "~0.12.7"
   }
 }
