--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,5 @@ before_script:
 script:
   - gulp jasmine
 after_script:
-  -  gulp coverage
+  -  cat ./coverage/lcov.info | ./node_modules/.bin/coveralls
+after_success: 'npm run coverage'
