--- a/package.json
+++ b/package.json
@@ -20,16 +20,18 @@
   "devDependencies": {
     "coveralls": "^2.11.15",
     "eslint": "^3.13.1",
+    "eslint-config-airbnb-base": "^11.0.1",
     "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "gulp": "^3.9.1",
     "gulp-jasmine-node": "^1.0.7",
     "gulp-livereload": "^3.8.1",
-    "jshint": "^2.9.4"
   },
   "dependencies": {
     "body-parser": "1.15.2",
+    "eslint-plugin-promise": "^3.4.0",
     "express": "~4.8.0",
     "gulp-open": "^2.0.0",
     "http": "0.0.0",
