--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,8 @@
     "extends": "airbnb-base",
     "plugins": [
         "import"
-    ]
+    ],
+    "parserOptions": {
+        "ecmaVersion": 6
+    }
 }
