--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/andela-wmaina/inverted-index#readme",
   "devDependencies": {
+    "browser-sync": "^2.18.6",
     "coveralls": "^2.11.15",
     "eslint": "^3.13.1",
     "eslint-config-airbnb-base": "^11.0.1",
@@ -27,18 +28,17 @@
     "eslint-plugin-standard": "^2.0.1",
     "gulp": "^3.9.1",
     "gulp-jasmine-node": "^1.0.7",
-    "gulp-livereload": "^3.8.1",
     "jshint": "^2.9.4"
   },
   "dependencies": {
     "body-parser": "1.15.2",
     "eslint-plugin-promise": "^3.4.0",
     "express": "~4.8.0",
+    "gulp-nodemon": "^2.2.1",
     "gulp-open": "^2.0.0",
     "http": "0.0.0",
     "istanbul": "^0.4.5",
     "method-override": "~2.0.2",
-    "multer": "1.1.0",
     "path": "~0.12.7"
   }
 }
